Polish admin, auth, and fuel quality